Bug 107592 - Impress PPS save to ODP slow with dump (cppu3.dll)
Summary: Impress PPS save to ODP slow with dump (cppu3.dll)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0 all versions
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: perf
Depends on:
Blocks:
 
Reported: 2017-05-03 12:16 UTC by Timur
Modified: 2019-05-15 15:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
debug WinDBG from dump with procdump - LO 6.1+ (10.24 KB, text/plain)
2018-05-04 09:06 UTC, Timur
Details
Perf flamegraph (2.80 MB, image/svg+xml)
2019-04-19 11:23 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2017-05-03 12:16:05 UTC
Open PPS attachment 118766 [details] from Bug 87204 and save as ODP. 
It's rather slow now, 50 seconds for me. Also used to be slow up 4.0, so no regression. Tested in Windows 7 both with 32-bit and 64-bit LO.
From 4.1 to 5.1 there was crash but it was fixed probably with bug 102688.
Comment 1 Xisco Faulí 2017-05-03 15:14:06 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: 597a2f5d5bd37443262b0775b8439bc3502aef1b
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: es-ES (ca_ES.UTF-8); Calc: group

time

real	2m29.178s
user	1m59.132s
sys	0m0.936s
Comment 2 QA Administrators 2018-05-04 02:40:36 UTC Comment hidden (obsolete)
Comment 3 Timur 2018-05-04 09:06:12 UTC
Created attachment 141887 [details]
debug WinDBG from dump with procdump - LO 6.1+

Repro with 6.1+. Procdump shows dump.
Comment 4 Buovjaga 2019-04-19 11:23:05 UTC
Created attachment 150880 [details]
Perf flamegraph

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: 1fee3f1da6291bfbcd75455512726215d41b3e83
CPU threads: 8; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 18 April 2019
Comment 5 Commit Notification 2019-05-13 11:23:54 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/349919440b1454eda2de783a0c3e6bd3bae4542b%5E%21

tdf#107592 Impress PPS save to ODP slow

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Timur 2019-05-14 09:47:21 UTC
Actually, there were 2 dumps, on fileopen and on filesave.
fileopen:
STACK_COMMAND:  ~0s; .ecxr ; kb
FOLLOWUP_IP: 
mergedlo!SfxBroadcaster::AddListener+1
5b442721 8bec            mov     ebp,esp
filesave
STACK_COMMAND:  ~0s; .ecxr ; kb
FOLLOWUP_IP: 
mergedlo+1ff8026
5c5c8026 83c418          add     esp,18h

With fix, I don't see dumps anymore and loading time decreased from 40 to 10 seconds in my case. Or from 20 to 5 in other case. 

Thanks Noel.
Comment 7 Xisco Faulí 2019-05-15 15:24:02 UTC
(In reply to Xisco Faulí from comment #1)
> Confirmed in
> 
> Version: 5.4.0.0.alpha0+
> Build ID: 597a2f5d5bd37443262b0775b8439bc3502aef1b
> CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
> Locale: es-ES (ca_ES.UTF-8); Calc: group
> 
> time
> 
> real	2m29.178s
> user	1m59.132s
> sys	0m0.936s

it takes

real	0m54,430s
user	0m52,958s
sys	0m1,955s

in

Version: 6.3.0.0.alpha1+
Build ID: a3e649c3384d19a5ad540c3d65d5f79b66fd9090
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Nice improvement...