comphelper/source/misc/anycompare.cxx
@@ -226,6 +226,15 @@ namespace comphelper
         return pComparator;
     }
 
+    bool anyLess( css::uno::Any const & lhs, css::uno::Any const & rhs)
+    {
+        auto lhsTypeClass = lhs.getValueType().getTypeClass();
+        auto rhsTypeClass = rhs.getValueType().getTypeClass();
+        if (lhsTypeClass != rhsTypeClass)
+            return lhsTypeClass < rhsTypeClass;
+        std::unique_ptr< IKeyPredicateLess > pred = getStandardLessPredicate( lhs.getValueType(), Reference< XCollator >() );
+        return pred->isLess(lhs, rhs);
+    }
 
 } // namespace comphelper
 
